{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 800,
  "lineage": "4d686ff0-da67-f22d-ef4d-6cb0edda3edc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-019c1d8dbb32dff75",
            "domain": "vpc",
            "id": "eipalloc-0d2d8f020642f722a",
            "network_interface": "eni-0e056555a0a5fd706",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-34-225-44-9.compute-1.amazonaws.com",
            "public_ip": "34.225.44.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natGW"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:248250821541:instance/i-0ecd32884f667ed02",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdh",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01125be801dacb77b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecd32884f667ed02",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b54c74a1e79285b2",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_ip": "10.0.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-090ffba15606e1b93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aaa3e6f73477347",
            "tags": {
              "Name": "DB",
              "count": "3"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "ebs_for_db",
              "Server_type": "Database"
            },
            "vpc_security_group_ids": [
              "sg-063d2db099a6f45fd"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.db_allow_sec",
            "aws_subnet.subnet_private",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:248250821541:instance/i-09cb1ad95df2feb51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cb1ad95df2feb51",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d9f47b4abab06b9a",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_ip": "54.226.147.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04f1838532a974bed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25f3f341935c737",
            "tags": {
              "Name": "Terra_Instance_0",
              "count": "3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084abaf295f10c87b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow_sec",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:248250821541:instance/i-0c1c05932e7810198",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1c05932e7810198",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017feacdc2a216cea",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_ip": "10.0.1.12",
            "public_ip": "34.227.225.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06157734e59fa929b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25f3f341935c737",
            "tags": {
              "Name": "Terra_Instance_1",
              "count": "3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084abaf295f10c87b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow_sec",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:248250821541:instance/i-0804d34271ea7b7be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0804d34271ea7b7be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c653953fb2693a7",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_ip": "54.234.192.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-085052b468a513012",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f25f3f341935c737",
            "tags": {
              "Name": "Terra_Instance_2",
              "count": "3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084abaf295f10c87b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow_sec",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:internet-gateway/igw-0647cd54c17e23bdb",
            "id": "igw-0647cd54c17e23bdb",
            "owner_id": "248250821541",
            "tags": {
              "Name": "Terra-IGW"
            },
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2d8f020642f722a",
            "id": "nat-0a3ea640d3cd7c4d8",
            "network_interface_id": "eni-0e056555a0a5fd706",
            "private_ip": "10.0.1.10",
            "public_ip": "34.225.44.9",
            "subnet_id": "subnet-0f25f3f341935c737"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e645b534f0ca723c",
            "owner_id": "248250821541",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3ea640d3cd7c4d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route"
            },
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082e214e0647fe3ab",
            "owner_id": "248250821541",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0647cd54c17e23bdb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route"
            },
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c305409a5eb3257e",
            "route_table_id": "rtb-0e645b534f0ca723c",
            "subnet_id": "subnet-05aaa3e6f73477347"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route",
            "aws_subnet.subnet_private",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fa90921912d9f06",
            "route_table_id": "rtb-082e214e0647fe3ab",
            "subnet_id": "subnet-0f25f3f341935c737"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route",
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:security-group/sg-084abaf295f10c87b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084abaf295f10c87b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20201105084325253000000001",
            "name_prefix": "",
            "owner_id": "248250821541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-for-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_allow_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:security-group/sg-063d2db099a6f45fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063d2db099a6f45fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/28"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20201105084332088000000002",
            "name_prefix": "",
            "owner_id": "248250821541",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-for-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_subnet.subnet_public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:subnet/subnet-05aaa3e6f73477347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-05aaa3e6f73477347",
            "map_public_ip_on_launch": false,
            "owner_id": "248250821541",
            "tags": {
              "Name": "Subnet_private"
            },
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:subnet/subnet-0f25f3f341935c737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0f25f3f341935c737",
            "map_public_ip_on_launch": true,
            "owner_id": "248250821541",
            "tags": {
              "Name": "Subnet_public"
            },
            "vpc_id": "vpc-0910ae76201032a22"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248250821541:vpc/vpc-0910ae76201032a22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a06b4fd03290bf16",
            "default_route_table_id": "rtb-0f471d5cdfd17ad1e",
            "default_security_group_id": "sg-0c18b1244f5bd2c4c",
            "dhcp_options_id": "dopt-4eaf4a34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0910ae76201032a22",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f471d5cdfd17ad1e",
            "owner_id": "248250821541",
            "tags": {
              "Name": "My_Terra_VPC"
            }
          }
        }
      ]
    }
  ]
}